Fix styling error stretching option field, add box-sizing to * element in css

--- a/Fullstack JavaScript/intermediate-html-and-css/forms/style.css
+++ b/Fullstack JavaScript/intermediate-html-and-css/forms/style.css
@@ -1,6 +1,7 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 body {
@@ -64,26 +65,33 @@ body {
 .legacy-form-row {
     border: none;
     margin-bottom: 40px;
-  }
+}
   
-  .legacy-form-row legend {
+.legacy-form-row legend {
     margin-bottom: 15px;
-  }
+}
   
-  .legacy-form-row .radio-label {
+.legacy-form-row .radio-label {
     display: block;
     font-size: 14px;
     padding: 0 20px 0 10px;
-  }
+}
   
-  .legacy-form-row input[type='radio'] {
+.legacy-form-row input[type='radio'] {
     margin-top: 2px;
-  }
+}
     
-  .legacy-form-row .radio-label,
-  .legacy-form-row input[type='radio'] {
+.legacy-form-row .radio-label,
+.legacy-form-row input[type='radio'] {
     float: left;
-  }
+}
+
+.form-row select {
+
+    padding: 5px;
+    font-size: 14px;
+    -webkit-appearance: none;
+}
 
 @media only screen and (min-width: 700px) {
     .speaker-form-header,
